fix user logic
